# interview

./: README.md
interview_client/: CMakeLists.txt
interview_client/src/: main.cpp
interview_client/src/client/: Client.cpp  Client.h
interview_client/src/utils/: serialization.h
interview_server/: CMakeLists.txt  config.ini
interview_server/src/: main.cpp
interview_server/src/imggen/: ImageGenerator.cpp  ImageGenerator.h
interview_server/src/server/: Server.cpp  Server.h
interview_server/src/utils/: serialization.h
